# PhysicsVisualizer

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
app/: __init__.py  main_window.py  project_registry.py  run_history.py
assets/legacy/: old_code_notes.txt
assets/test/: testall.m
legacy/v1-matlab/ChladniFigures-matlab/: README.md  main.m
legacy/v1-matlab/ConductorCircularHole-matlab/: conductor_circhole.m
legacy/v1-matlab/CreativePlotStudio-matlab/: README.txt  main.m
legacy/v1-matlab/FourierOptics-matlab/: discover_plane_modules.m  export_fourier_results.m  fourier_4f_formula.m  fourier_optics_gui.m  params_preset.m  plot_style_set.m  zernike_nm.m
legacy/v1-matlab/MieScattering-go/: README.md  go.mod  go.sum  main.go
legacy/v1-matlab/OpticsStudio-matlab/: README.md  main.m
legacy/v1-matlab/Support-matlab/: color_bar.m
projects/ChladniFigures/: README.md  main.m
projects/CreativePlotStudio/: README.md
projects/CrystalOpticsBoundary/: README.md
projects/GraphiteLevitation/: README.md  __init__.py  main.m
projects/MieScattering/: README.md  main.m
projects/MovingChargeFields/: README.md  main.m
projects/OpticsStudio/: README.md  main.m
projects/RigidBodyRotation/: README.md  main.m
projects/SpecialFunctionsStudio/: README.md
projects/ThinFilm/: README.md  main.m  main.py
projects/Waveguide/: README.md
utils/: __init__.py  apply_tex_style.m  bind_workflow.m  control_schema.py  create_control_panel.m  create_tab_layout.m  image_output.m  image_output.py  launch_gui_studio.m  render_result.m  render_result.py  style.py
(+761 files in other folders)
